Fix nav spacing

--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ h5 {
 .nav {
     position: relative;
     top: 40px;
-    margin-bottom: 60px;
+    margin-bottom: 20px;
     width: 100%;
     background-color: #fffef7;
-    height: 78px;
+    height: fit-content;
 }
 
 .card {
